syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.myhelloworld";
option java_outer_classname = "MyHelloWorldProto";
option objc_class_prefix = "HLW";

package myhelloworld;

//simple client and server, without any streaming
service HelloWorldGreeter {
  rpc SayHello (HelloWorldRequest) returns (HelloWorldResponse) {}
}

//only service side streaming
service HelloWorldServerStreamingGreeter {
  rpc SayHello (HelloWorldRequest) returns (stream HelloWorldResponse) {}
}

//only client side streaming
service HelloWorldClientStreamingGreeter {
  rpc SayHello (stream HelloWorldRequest) returns (HelloWorldResponse) {}
}

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string message = 1;
}
